test/chainsaw/authpolicy/pod_annotation_validation/application-with-wrong-pod-annotations.yaml
apiVersion: v1
kind: Secret
type: Opaque
metadata:
  name: envoy-secret
data:
  HELLO: d29ybGQ=
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: application
spec:
  podSettings:
    annotations:
      sidecar.istio.io/logLevel: 'debug'
      sidecar.istio.io/userVolume: '[
        {
          "name": "secret",
          "secret": {
            "secretName": "envoy-secret"
          }
        }        
      ]'
      sidecar.istio.io/userVolumeMount: '[
        {
          "name": "secret",
          "mountPath": "/etc/istio/config",
          "readonly": true
        }        
      ]'
  image: hashicorp/http-echo:latest
  port: 5678
  replicas: 1
  ingresses:
    - foo.bar
  accessPolicy:
    outbound:
      rules:
        - application: mock-oauth2
          namespace: auth
