test/chainsaw/authpolicy/pod_annotation_validation/application-with-correct-pod-annotations-assert.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
status:
  phase: Ready
  ready: true
