test/chainsaw/authpolicy/pod_annotation_validation/application-without-pod-annotations-assert.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-deny-auth-rules
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths:
              - '*'
  selector:
    matchLabels:
      app: application
---
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
status:
  phase: Invalid
  ready: false
